--- a/pagina de inicio/src/css/style.css
+++ b/pagina de inicio/src/css/style.css
@@ -12,12 +12,7 @@
     background-color: #8675a2;
     display: flex;
     align-items: center;
-    .header__logo3{
-        margin-left: 30px;
-    }
-    .header__logo3{
-        margin: 0 auto;
-    }
+    padding: 15px;
 }
 .header__menu{
     top: 0;
@@ -70,6 +65,7 @@
         display: none;
     }
     .btn{
+        color: #fff;
         font-weight: bold;
         font-size: 20px;
         margin-right: 100px;
@@ -123,9 +119,13 @@
     grid-template-areas: 
     "n1 n2 n4 n5"
     "n1 n3 n4 n6";
+    gap: 12px;
     & img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
+        border-radius: 13px;
+        border: 8px solid #fff;
     }
     #img1{
         grid-area: n1;
